Programación/AppJavaFx/ITV_TEST/src/main/kotlin/errors/VehicleError.kt
package errors

sealed class VehicleError(val message: String) {
    object VehicleNotFound: VehicleError("Error Vehicle not found")
}